<resources>
    <string name="app_name">withme</string>
    <string name="동네인증">동네인증</string>
    <string name="현재위치">현재 위치</string>
    <string name="이위치에서위드미하기">이 위치에서 위드미 하기</string>
    <string name="hello_blank_fragment" />
    <string name="recruitment_detail_title">우리은행 스터디 면접 구함당</string>
    <string name="recruitment_detail_date">1/12 23:30</string>
    <string name="recruitment_detail_view">106</string>
    <string name="recruitment_detail_note">5</string>
    <string name="recruitment_detail_username">김써니</string>
    <string name="recruitment_detail_region">수지구</string>
    <string name="recruitment_detail_recruiting">모집 중</string>
    <string name="recruitment_detail_field">스터디</string>
    <string name="recruitment_detail_area">서울 송파구</string>
    <string name="recruitment_detail_personnel">4~6명</string>
    <string name="recruitment_detail_link">https://open.kakao.com/kdjfdkfj1</string>
    <string name="recruitment_detail_heart_number">13</string>
    <string name="message_your_username">우루과이과우루</string>
    <string name="message_your_area">광진구</string>
    <string name="message_my_area">강남구</string>
    <string name="message_sharing_date">2023.01.09 (월)</string>
    <string name="manageInfo_title">내 정보 관리</string>
    <string name="manageInfo_area">강남구</string>
    <string name="manageInfo_reliability">위드미 신뢰도</string>
    <string name="manageInfo_reliability_percent">87.8%</string>
    <string name="manageInfo_Identification">본인인증</string>
    <string name="manageInfo_Identification_phoneNumber">휴대폰 번호</string>
    <string name="manageInfo_phoneNumber">010-4476-7637</string>
    <string name="manageInfo_Identification_birthday">생년월일</string>
    <string name="manageInfo_birthday">2000.10.01</string>
    <string name="manageInfo_Identificaiton_gender">성별</string>
    <string name="manageInfo_gender">여</string>
    <string name="manageInfo_Identification_area">동네인증</string>
    <string name="manageInfo_Identification_location">위치</string>
    <string name="manageInfo_location">중계동</string>

</resources>