<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageinfoActivity">

    <TextView
        android:id="@+id/manageInfo_title"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0247"
        android:text="@string/manageInfo_title"
        android:fontFamily="@font/kr_font"
        android:textColor="#373839"
        android:textSize="18sp"
        android:textFontWeight="700"
        android:letterSpacing="-0.03"
        android:includeFontPadding="false"
        android:gravity="top"
        />

    <ImageButton
        android:id="@+id/manageInfo_modifybtn"
        android:layout_width="71dp"
        android:layout_height="24dp"
        android:background="@drawable/btn_manageinfo_modify_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        />

    <LinearLayout
        android:layout_width="101.63dp"
        android:layout_height="50dp"
        android:layout_marginStart="16.15dp"
        android:layout_marginTop="59.86dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/manageInfo_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/message_my_profile"
            />

        <TextView
            android:id="@+id/manageInfo_name"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginStart="8.78dp"
            android:fontFamily="@font/notosanskr_regular"
            android:gravity="top"
            android:includeFontPadding="false"
            android:letterSpacing="-0.03"
            android:textFontWeight="500"
            android:text="@string/recruitment_detail_username"
            android:textColor="#373839"
            android:textSize="15dp"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/manageInfo_area"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="88dp"
        android:alpha="8.37"
        android:fontFamily="@font/notosanskr_regular"
        android:gravity="center_horizontal|top"
        android:includeFontPadding="false"
        android:text="@string/manageInfo_area"
        android:textColor="#737373"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    
    <ImageView
        android:id="@+id/manageInfo_reliability_img"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/manageinfo_reliability"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0962"
        app:layout_constraintHorizontal_bias="0.95"/>

    <TextView
        android:id="@+id/manageInfo_reliability"
        android:layout_width="wrap_content"
        android:layout_height="14dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.093"
        app:layout_constraintHorizontal_bias="0.839"
        android:text="@string/manageInfo_reliability"
        android:fontFamily="@font/kr_font"
        android:textColor="#737373"
        android:textSize="10sp"
        android:textFontWeight="500"
        android:letterSpacing="-0.03"
        android:includeFontPadding="false"
        android:gravity="top"
        />

    <TextView
        android:id="@+id/manageInfo_reliability_percent"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.113"
        app:layout_constraintHorizontal_bias="0.82"
        android:text="@string/manageInfo_reliability_percent"
        android:fontFamily="@font/roboto"
        android:textColor="#5AD7C2"
        android:textSize="18sp"
        android:textFontWeight="700"
        android:letterSpacing="-0.03"
        android:includeFontPadding="false"
        android:gravity="top"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@drawable/message_gray_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.178" />

    <TextView
        android:id="@+id/manageInfo_Identification"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.22"
        app:layout_constraintHorizontal_bias="0.06"
        android:text="@string/manageInfo_Identification"
        android:fontFamily="@font/kr_font"
        android:textColor="#373839"
        android:textSize="16dp"
        android:textFontWeight="700"
        android:letterSpacing="-0.03"
        android:includeFontPadding="false"
        android:gravity="top"
        />
    
    <ImageView
        android:id="@+id/manageInfo_authentication"
        android:layout_width="60.41dp"
        android:layout_height="22.79dp"
        android:background="@drawable/manageinfo_authentication"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.22"
        app:layout_constraintHorizontal_bias="0.93"/>

    <TextView
        android:id="@+id/manageInfo_Identification_phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.289"
        app:layout_constraintHorizontal_bias="0.06"
        android:text="@string/manageInfo_Identification_phoneNumber"
        android:fontFamily="@font/kr_font"
        android:textColor="#373839"
        android:textSize="14sp"
        android:textFontWeight="500"
        android:letterSpacing="-0.03"
        android:includeFontPadding="false"
        android:gravity="top"
        />

    <TextView
        android:id="@+id/manageInfo_phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.324"
        app:layout_constraintHorizontal_bias="0.06"
        android:text="@string/manageInfo_phoneNumber"
        android:fontFamily="@font/roboto"
        android:textColor="#737373"
        android:textSize="14sp"
        android:textFontWeight="400"
        android:letterSpacing="-0.03"
        android:includeFontPadding="false"
        android:gravity="top"
        />

    <ImageView
        android:id="@+id/manageInfo_phoneNumber_check"
        android:layout_width="15.76dp"
        android:layout_height="11.25dp"
        android:background="@drawable/manageinfo_check"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.31"
        app:layout_constraintHorizontal_bias="0.892"/>

    <TextView
        android:id="@+id/manageInfo_Identification_birthday"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:fontFamily="@font/kr_font"
        android:gravity="top"
        android:includeFontPadding="false"
        android:letterSpacing="-0.03"
        android:text="@string/manageInfo_Identification_birthday"
        android:textColor="#373839"
        android:textFontWeight="500"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.381" />

    <TextView
        android:id="@+id/manageInfo_birthday"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.416"
        app:layout_constraintHorizontal_bias="0.06"
        android:text="@string/manageInfo_birthday"
        android:fontFamily="@font/roboto"
        android:textColor="#737373"
        android:textSize="14sp"
        android:textFontWeight="400"
        android:letterSpacing="-0.03"
        android:includeFontPadding="false"
        android:gravity="top"
        />

    <ImageView
        android:id="@+id/manageInfo_birthday_check"
        android:layout_width="15.76dp"
        android:layout_height="11.25dp"
        android:background="@drawable/manageinfo_check"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintHorizontal_bias="0.892"/>

    <TextView
        android:id="@+id/manageInfo_Identification_gender"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:fontFamily="@font/kr_font"
        android:gravity="top"
        android:includeFontPadding="false"
        android:letterSpacing="-0.03"
        android:text="@string/manageInfo_Identificaiton_gender"
        android:textColor="#373839"
        android:textFontWeight="500"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.474" />

    <TextView
        android:id="@+id/manageInfo_gender"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.505"
        app:layout_constraintHorizontal_bias="0.06"
        android:text="@string/manageInfo_gender"
        android:fontFamily="@font/kr_font"
        android:textColor="#737373"
        android:textSize="14sp"
        android:textFontWeight="400"
        android:letterSpacing="-0.03"
        android:includeFontPadding="false"
        android:gravity="top"
        />

    <ImageView
        android:id="@+id/manageInfo_gender_check"
        android:layout_width="15.76dp"
        android:layout_height="11.25dp"
        android:background="@drawable/manageinfo_check"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.488"
        app:layout_constraintHorizontal_bias="0.892"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/manageinfo_line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.54" />

    <TextView
        android:id="@+id/manageInfo_Identification_area"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.592"
        app:layout_constraintHorizontal_bias="0.06"
        android:text="@string/manageInfo_Identification_area"
        android:fontFamily="@font/kr_font"
        android:textColor="#373839"
        android:textSize="16dp"
        android:textFontWeight="700"
        android:letterSpacing="-0.03"
        android:includeFontPadding="false"
        android:gravity="top"
        />

    <TextView
        android:id="@+id/manageInfo_Identification_location"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.646"
        app:layout_constraintHorizontal_bias="0.06"
        android:text="@string/manageInfo_Identification_location"
        android:fontFamily="@font/kr_font"
        android:textColor="#373839"
        android:textSize="14sp"
        android:textFontWeight="500"
        android:letterSpacing="-0.03"
        android:includeFontPadding="false"
        android:gravity="top"
        />

    <TextView
        android:id="@+id/manageInfo_location"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.685"
        app:layout_constraintHorizontal_bias="0.06"
        android:text="@string/manageInfo_location"
        android:fontFamily="@font/kr_font"
        android:textColor="#737373"
        android:textSize="14sp"
        android:textFontWeight="400"
        android:letterSpacing="-0.03"
        android:includeFontPadding="false"
        android:gravity="top"
        />

    <ImageView
        android:id="@+id/manageInfo_location_check"
        android:layout_width="15.76dp"
        android:layout_height="11.25dp"
        android:background="@drawable/manageinfo_check"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.660"
        app:layout_constraintHorizontal_bias="0.892"/>

</androidx.constraintlayout.widget.ConstraintLayout>