<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sharing_message">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/sharing_message_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:minHeight="?attr/actionBarSize"
        app:menu="@menu/message_sending_menu"
        app:contentInsetStart="0dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_marginTop="18.51dp"
            android:text="쪽지"
            android:fontFamily="@font/kr_font"
            android:textFontWeight="700"
            android:textSize="18sp"
            android:textColor="#373839"
            android:letterSpacing="-0.03"
            android:includeFontPadding="false"
            android:gravity="center"
            android:layout_gravity="center"/>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/message_recruitment"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0438"
        app:layout_constraintVertical_bias="0.0950"
        android:text="모집글"
        android:fontFamily="@font/kr_font"
        android:textSize="12sp"
        android:letterSpacing="-0.03"
        android:textColor="#A3A5A4"
        android:includeFontPadding="false"
        android:textFontWeight="500"
        android:gravity="center_horizontal|top"
        />
    <TextView
        android:id="@+id/message_recruitment_title"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintVertical_bias="0.0950"
        android:text="삼성 SDS 면접 스터디 하실 분"
        android:fontFamily="@font/kr_font"
        android:textSize="12sp"
        android:letterSpacing="-0.03"
        android:textColor="#737373"
        android:includeFontPadding="false"
        android:textFontWeight="500"
        android:gravity="center_horizontal|top"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="5.77dp"
        android:layout_marginTop="96dp"
        android:background="@drawable/message_gray_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="157.82dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.162">

        <ImageView
            android:id="@+id/message_your_photo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/message_your_profile" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="9.1dp"
            android:fontFamily="@font/kr_font"
            android:gravity="top"
            android:includeFontPadding="false"
            android:letterSpacing="-0.03"
            android:text="@string/message_your_username"
            android:textColor="#373839"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/message_your_reliability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:background="@drawable/message_your_reliability"
            android:layout_marginTop="5dp"
            android:layout_marginStart="4dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/message_your_area"
        android:layout_width="wrap_content"
        android:layout_height="12dp"
        android:fontFamily="@font/kr_font"
        android:gravity="center_horizontal|top"
        android:includeFontPadding="false"
        android:letterSpacing="-0.03"
        android:text="@string/message_your_area"
        android:textColor="#737373"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.188"
        app:layout_constraintHorizontal_bias="0.17"
        />

    <LinearLayout
        android:layout_width="96.92dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.162">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="10.02dp"
            android:fontFamily="@font/kr_font"
            android:gravity="top"
            android:includeFontPadding="false"
            android:letterSpacing="-0.03"
            android:text="김써니"
            android:textColor="#373839"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/message_my_photo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8.9dp"
            android:src="@drawable/message_my_profile" />
    </LinearLayout>

    <TextView
        android:id="@+id/message_my_area"
        android:layout_width="wrap_content"
        android:layout_height="12dp"
        android:text="@string/message_my_area"
        android:gravity="center_horizontal|top"
        android:fontFamily="@font/kr_font"
        android:includeFontPadding="false"
        android:letterSpacing="-0.03"
        android:textColor="#737373"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.188"
        app:layout_constraintHorizontal_bias="0.83"
        />
    <TextView
        android:id="@+id/message_sharing_date"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:text="@string/message_sharing_date"
        android:gravity="center_horizontal|top"
        android:fontFamily="@font/kr_font"
        android:includeFontPadding="false"
        android:letterSpacing="-0.03"
        android:textColor="#737373"
        android:textSize="12sp"
        android:textFontWeight="400"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.244"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message_sharing_date" />

</androidx.constraintlayout.widget.ConstraintLayout>